Drawer position fix
-Previous CSS was causing Drawer to be positioned inconsistently.
-Current CSS more consistently positions Drawer off-screen when inactive

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -44,7 +44,7 @@
   position: fixed;
   background: aliceblue;
   text-align: end;
-  right: -30%;
+  left: 100%;
   width: 30%;
   max-width: 400px;
   border-bottom-left-radius: 25%;
